@@ -726,7 +726,7 @@ public class ActionFactory extends HibernateFactory {
             List<Action> results = findDependentActions.list();
             returnSet.addAll(results);
             // Reset list of actions for the next hierarchy level:
-            actionsAtHierarchyLevel = results.stream().map(a -> a.getId()).collect(Collectors.toList());
+            actionsAtHierarchyLevel = results.stream().map(a -> a.getId()).toList();
         }
         while (!actionsAtHierarchyLevel.isEmpty());
 
