@@ -24,7 +24,6 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import javax.persistence.Tuple;
 
@@ -67,7 +66,7 @@ public class PackageOverview extends BaseTupleDto {
                 .map(value ->
                         Arrays.stream(value.split(","))
                                 .map(c -> new Row(Map.of("name", c)))
-                                .collect(Collectors.toList()))
+                                .toList())
                 .orElse(new ArrayList<>());
     }
 
