@@ -42,7 +42,6 @@ import com.suse.utils.Opt;
 
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 /**
  * FormulaHandler
@@ -166,7 +165,7 @@ public class FormulaHandler extends BaseHandler {
                     .map(Server::asMinionServer)
                     .flatMap(Opt::stream)
                     .map(MinionServer::getMinionId)
-                    .collect(Collectors.toList());
+                    .toList();
             saltApi.refreshPillar(new MinionList(minions));
         }
         catch (ValidatorException e) {
@@ -255,7 +254,7 @@ public class FormulaHandler extends BaseHandler {
             List<Integer> sids) {
         List<Long> ids = sids.stream()
                 .map(Integer::longValue)
-                .collect(Collectors.toList());
+                .toList();
         return this.formulaManager.getCombinedFormulaDataForSystems(loggedInUser, ids, formulaName);
     }
 
